cabal-version:       3.0

name:                dep-t
version:             0.1.0.0
synopsis:            Reader-like monad transformer for dependency injection.
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
-- copyright:
category:            Control
extra-source-files:  CHANGELOG.md, README.md

common common
  build-depends:       base >=4.10.0.0,
                       transformers ^>= 0.5.0.0,
                       mtl ^>= 2.2,
                       unliftio-core ^>= 0.2.0.0,
  default-language:    Haskell2010

library
  import: common
  exposed-modules:     Control.Monad.Dep
  hs-source-dirs:      lib 

test-suite dep-t-test
  import: common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       
    dep-t, 
    rank2classes   ^>= 1.4.1,
    template-haskell,
