cabal-version:       3.0

name:                dep-t
version:             0.1.0.0
synopsis:            Reader-like monad transformer for dependency injection.
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
-- copyright:
category:            Control
extra-source-files:  CHANGELOG.md, README.md

executable dep-t-bug
  main-is:             Main.hs
  build-depends:       base >=4.10.0.0,
                       transformers ^>= 0.5.0.0,
                       rank2classes   ^>= 1.4.1,
                       template-haskell,
  default-language:    Haskell2010

