cabal-version:       3.0

name:                dep-t-advice
version:             0.1.0.0
synopsis:            Giving good advice to functions in a DepT environment.
description:         A companion to the dep-t package. Easily add behaviour to functions living in a DepT environment, 
                     whatever the number of arguments they might have. In more highfalutin language, this provides something
                     resembling the "advices" of aspect-oriented programming.
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
category:            Control
extra-source-files:  CHANGELOG.md, README.md

source-repository    head
  type:     git
  location: https://github.com/danidiaz/dep-t-advice.git

common common
  build-depends:       base >=4.10.0.0 && < 5,
                       sop-core ^>= 0.5.0.0,
                       constraints ^>= 0.12,
                       dep-t ^>= 0.1.0.0
  default-language:    Haskell2010

library
  import: common
  exposed-modules:     Control.Monad.Dep.Advice
  hs-source-dirs:      lib 

test-suite dep-t-advice-test
  import: common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       
    dep-t, 
    dep-t-advice, 
    rank2classes       ^>= 1.4.1,
    transformers       ^>= 0.5.0.0,
    mtl                ^>= 2.2,
    template-haskell,
    tasty              >= 1.3.1,
    tasty-hunit        >= 0.10.0.2,
